# Databuddy

./: DATABUDDY_2.0_IMPROVEMENTS.md  SSR_MIGRATION_SUMMARY.md  api.Dockerfile  package.json
apps/api/: package.json
apps/api/src/query/: utils.ts
apps/api/src/routes/public/: flags.test.ts
apps/basket/: package.json
apps/basket/src/: index.ts
apps/basket/src/lib/: db.ts  logger.ts  queue.ts  retry.ts
apps/basket/src/routes/: basket.ts
apps/dashboard/: package.json
apps/dashboard/app/: globals.css
apps/dashboard/components/: date-range-picker.tsx  empty-state.tsx  website-dialog.tsx
apps/dashboard/components/analytics/: stat-card.tsx
apps/dashboard/components/layout/: category-sidebar.tsx  organization-selector.tsx  sidebar.tsx  theme-toggle.tsx
apps/dashboard/components/notifications/: notifications-popover.tsx
apps/dashboard/components/organizations/: create-organization-dialog.tsx  invite-member-dialog.tsx
apps/dashboard/components/table/: data-table.tsx  table-content.tsx  table-toolbar.tsx
apps/dashboard/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  page-transition.tsx  popover.tsx  skeleton.tsx  table.tsx
apps/dashboard/hooks/: use-websites.ts
apps/dashboard/lib/: trpc-server.ts
apps/docs/app/(home)/: page.tsx
apps/docs/components/: structured-data.tsx
apps/docs/components/docs/: code-block.tsx
apps/docs/components/landing/: features-bento.tsx
apps/docs/content/docs/: ai-sdk.mdx  meta.json
rust/: a.txt
rust/ingestion/: Cargo.toml
rust/ingestion/src/: main.rs  models.rs  producer.rs
(+48 files in other folders)
