[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }
rdkafka = { version = "0.38", features = [
    "cmake-build",
    "ssl-vendored",
    "sasl",
] }
log = "0.4"
env_logger = "0.11.8"
dotenv = "0.15"
